--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <html>
     <h1>Gerência de Configuração e Dependência!</h1>
     <p>Disparando pipeline pela versão no Github!</p>
-    <p>Teste de deploy version</p>
+    <p>Teste de deploy version 2</p>
 </html>
